--- a/Proyecto_React/package.json
+++ b/Proyecto_React/package.json
@@ -11,18 +11,24 @@
   },
   "dependencies": {
     "firebase": "^10.12.5",
+    "mongoose": "^8.7.2",
+    "mongoose-paginate-v2": "^1.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.0"
+    "react-router-dom": "^6.25.0",
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "mocha": "^10.7.3",
+    "supertest": "^7.0.0",
     "vite": "^5.3.1"
   }
 }
